Fix mobile menu page horizontal overflow from off-canvas panels.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,8 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
@@ -20,6 +22,7 @@ body {
   background-color: $color-cream;
   line-height: 1.6;
   overflow-x: hidden;
+  max-width: 100%;
   min-width: 320px;
 
   &.no-scroll {
